tests/NormalTests/paczka2/big_fuzzy/68644458.err
Error in line 2: OquMGmI S700 8,3
Error in line 6: lnKG0ZRl S700 89,5
Error in line 15: A971 S602 175,76
Error in line 16: ofcdwW3 S602 14,4
Error in line 10: A971 S602 94,9
Error in line 24: OquMGmI S842 56,7
Error in line 47: ofcdwW3 S700 9,1
Error in line 50: li3Oz S842 63,71
Error in line 37: lnKG0ZRl A971 75,0
Error in line 45: A971 S700 26,1
Error in line 54: A971 S842 73,6
Error in line 44: li3Oz S700 13,7
Error in line 56: li3Oz S842 1,3
Error in line 52: lnKG0ZRl S842 5,5
Error in line 65: lnKG0ZRl S602 109,84
Error in line 76: OquMGmI S842 12,22
Error in line 69: li3Oz A971 63,4
Error in line 85: OquMGmI S842 33,6
Error in line 88: OquMGmI S602 59,7
Error in line 93: NobZe S700 72,5
Error in line 94: OquMGmI A971 53,1
Error in line 92: ofcdwW3 S602 86,1
Error in line 100: ofcdwW3 S700 42,3
Error in line 99: OquMGmI S700 3,9
Error in line 62: lnKG0ZRl S602 44,3
Error in line 121: A971 S842 3,4
Error in line 134: NobZe S700 87,44
Error in line 128: A971 S602 4,5
Error in line 125: B03 A971 29,2
Error in line 137: lnKG0ZRl S602 71,4
Error in line 142: A971 S700 -3,1
Error in line 115: OquMGmI A971 24,3
Error in line 156: li3Oz S602 54,02
Error in line 154: li3Oz S700 23,0
Error in line 140: NobZe S700 235,1
Error in line 135: A971 S700 57,6
Error in line 167: lnKG0ZRl S700 87,2
Error in line 180: B03 S700 53,9
Error in line 179: A971 S842 93,9
Error in line 189: A971 S602 58,8
Error in line 199: OquMGmI A#71 17,#
Error in line 206: B03 A971 87,4
Error in line 192: OquMGmI S700 38,7
Error in line 212: B03 S700 60,3
Error in line 219: NobZe S842 79,4
Error in line 220: NobZe S342 249,3
Error in line 216: B03 S842 68,0
Error in line 225: çquMGmI A971 88,3
Error in line 231: B03 S602 84,1
Error in line 240: ofcdwW3 A971 9,6
Error in line 244: NobZe A971 57,3
